--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8080
 spring.servlet.multipart.max-file-size = 5MB
 spring.servlet.multipart.max-request-size = 5MB
+spring.web.resources.static-locations=file:///Users/nnpis/Downloads/upload/ ,classpath:/META-INF/resources/, classpath:/resources/, classpath:/static/, classpath:/public/
